--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'org.springframework:spring-core:6.1.13'
     implementation 'org.springframework:spring-context:6.1.13'
+    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
