"config: spring boot config"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ db.pool.size=12
 db.driver=PostgresDriver
 db.url=postgres:5433
 db.hosts=localhost,128.0.0.1
-spring.profiles.active=prod
+#spring.profiles.active=prod
