--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,8 @@
 plugins {
     id 'java'
+    id("org.springframework.boot") version "3.3.4"
+    id("io.spring.dependency-management") version "1.1.6"
+    id "io.freefair.lombok" version "8.10.2"
 }
 
 group = 'org.example'
@@ -10,9 +13,8 @@ repositories {
 }
 
 dependencies {
-    implementation 'org.springframework:spring-core:6.1.13'
-    implementation 'org.springframework:spring-context:6.1.13'
-    implementation 'jakarta.annotation:jakarta.annotation-api:3.0.0'
+    implementation 'org.springframework.boot:spring-boot-starter'
+    implementation 'org.postgresql:postgresql'
 
     testImplementation platform('org.junit:junit-bom:5.9.1')
     testImplementation 'org.junit.jupiter:junit-jupiter'
